work well with the flow: sunView, Walking, Jumping

--- a/NC1-Moved/Base.lproj/Main.storyboard
+++ b/NC1-Moved/Base.lproj/Main.storyboard
@@ -27,12 +27,44 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="bloob" destination="fNp-JV-6fo" id="y6l-wu-dWb"/>
+                        <outlet property="walk" destination="fNp-JV-6fo" id="y6l-wu-dWb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
+        </scene>
+        <!--Walking View Controller-->
+        <scene sceneID="UZM-1c-fiw">
+            <objects>
+                <viewController storyboardIdentifier="WalkingViewController" id="bIe-id-O9x" customClass="WalkingViewController" customModule="NC1_Moved" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="N1G-Nt-FVN">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KgM-jc-IyO">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bWn-Jl-pnV">
+                                <rect key="frame" x="146" y="71" width="123" height="56"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="AkT-Cm-9aA"/>
+                    </view>
+                    <connections>
+                        <outlet property="stepsCountLabel" destination="bWn-Jl-pnV" id="JqB-X3-s97"/>
+                        <outlet property="walkingView" destination="KgM-jc-IyO" id="MCl-NK-UvX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eTi-3I-rj4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1166.6666666666667" y="137.94642857142856"/>
         </scene>
         <!--Sun View Controller-->
         <scene sceneID="LWr-G5-wCn">
@@ -57,6 +89,30 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jLK-Si-8Z2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="829.01785714285711"/>
+        </scene>
+        <!--Jumping View Controller-->
+        <scene sceneID="KAq-uM-aaF">
+            <objects>
+                <viewController storyboardIdentifier="JumpingViewController" id="lC6-nv-LdE" customClass="JumpingViewController" customModule="NC1_Moved" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5Lp-8j-WaF">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rAh-La-EgX">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="dwa-08-CK8"/>
+                    </view>
+                    <connections>
+                        <outlet property="jumpView" destination="rAh-La-EgX" id="mAD-1A-DKN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f4J-dv-gZh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1163.768115942029" y="831.69642857142856"/>
         </scene>
         <!--Test View Controller-->
         <scene sceneID="h6b-zM-ypi">
